--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -136,3 +136,7 @@ hr.faded-hr {
     margin-top: 20px; /* Adjust the margin as needed */
     margin-bottom: 20px; /* Adjust the margin as needed */
   }
+
+  .small-icon {
+    font-size: 18px; /* Or any other size you prefer */
+  }
