--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -115,7 +115,7 @@ h6 {
 }
 
 .footer {
-    margin-top: -140px;
+    margin-top: -160px;
     height: 600px;
 }
 
@@ -139,4 +139,12 @@ hr.faded-hr {
 
   .small-icon {
     font-size: 18px; /* Or any other size you prefer */
+  }
+
+  .checkbox-container {
+    height: 20px;
+    width: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
