--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,6 +3,7 @@
 
 $theme-colors: map-merge($theme-colors, ("success": #5ccaa7,
             "primary": #038aff,
+            "secondary": #cccccc,
             "warning":#febd3d,
             "light": #ffffff,
             "dark":#161348));
